--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "deploy": "npm run build && gh-pages -d build"
+    "deploy": "npm run build && gh-pages -d build",
+    "start-sw": "npm run build && http-server ./build"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -31,5 +32,7 @@
       "last 1 safari version"
     ]
   },
-  "devDependencies": {}
+  "devDependencies": {
+    "http-server": "^0.9.0"
+  }
 }
