--- a/public/manifest.json
+++ b/public/manifest.json
@@ -6,6 +6,11 @@
       "src": "android-chrome-192x192.png",
       "sizes": "192x192",
       "type": "image/png"
+    },
+    {
+      "src": "favicon.ico",
+      "sizes": "32x32",
+      "type": "image/x-icon"
     }
   ],
   "start_url": "index.html",
