--- a/manifest.json
+++ b/manifest.json
@@ -3,6 +3,11 @@
   "name": "Create Shopping App Sample",
   "icons": [
     {
+      "src": "android-chrome-512x512.png",
+      "sizes": "512x512",
+      "type": "image/png"
+    },
+    {
       "src": "android-chrome-192x192.png",
       "sizes": "192x192",
       "type": "image/png"
@@ -11,15 +16,11 @@
       "src": "favicon.ico",
       "sizes": "32x32",
       "type": "image/x-icon"
-    },
-    {
-      "src": "android-chrome-512x512.png",
-      "sizes": "512x512",
-      "type": "image/png"
     }
   ],
   "start_url": "index.html",
   "display": "standalone",
+  "orientation": "portrait",
   "theme_color": "#222222",
   "background_color": "#4CC1FC"
 }
