meets all requirement

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
   "short_name": "Shopping App",
-  "name": "Create Shopping App Sample",
+  "name": "Shopping App",
   "icons": [
     {
       "src": "android-chrome-512x512.png",
